# vape-disassembly-station

./: .gitignore  README.md  setup_env.sh
exts/franka_rl/: pyproject.toml
exts/franka_rl/franka_rl/: __init__.py
exts/franka_rl/franka_rl/assets/: bottom_cap.usd  fixture.usd  tip30.usd  vape_jig.usd
exts/franka_rl/franka_rl/tasks/: __init__.py
exts/franka_rl/franka_rl/tasks/manipulation/: __init__.py
exts/franka_rl/franka_rl/tasks/manipulation/disassembly/: env_cfg.py
exts/franka_rl/franka_rl/tasks/manipulation/disassembly/agents/: rsl_rl_cfg.py
exts/franka_rl/franka_rl/tasks/manipulation/pick_and_place/: __init__.py  env_cfg.py
exts/franka_rl/franka_rl/tasks/manipulation/pick_and_place/agents/: __init__.py  rsl_rl_cfg.py
exts/franka_rl/franka_rl/tasks/manipulation/reach/: __init__.py  env_cfg.py
exts/franka_rl/franka_rl/tasks/manipulation/reach/agents/: __init__.py  rsl_rl_cfg.py
scripts/: observe.py  play.py  test_disassembly_pull_state_machine.py  train.py  train_sb3.py
