[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "franka_rl"
version = "0.1.0"
description = "RL training environments for Franka Emika using Isaac Lab"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["franka_rl*"]
